# Video-Subtitle-Generator

./: .env.example  .gitignore  README.md  README_en.md  pyproject.toml  run.py
src/video_subtitle_generator/: __init__.py  __main__.py  app.py  translator.py
